--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,11 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
-
+          
+      - run:
+          name: "Run Test"
+          command: "echo Hello new Command line!"
+  
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
