--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,8 @@ jobs:
       - checkout
       - run:
           name: "Say hello"
-          command: sfdx -v
-          
-      - run:
-          name: "Run Test"
-          command: "echo Hello new Command line!"
-  
+          command: sudo npm install -global sfdx-cli
+
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
